# django-reality-polls

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
django_polls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: 0001_initial.py
src/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/static/polls/: styles.css
src/templates/polls/: add_question.html  detail.html  index.html  results.html
tests/: tests.py
